infra/k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ecommerce
  labels:
    app: auth-service
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        version: v1
    spec:
      containers:
        - name: auth-service
          image: devicaro18/ominx-auth-service:latest
          ports:
            - containerPort: 6001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ecommerce
  labels:
    app: auth-service
spec:
  type: NodePort
  ports:
    - port: 6001
      targetPort: 6001
      nodePort: 30061
      protocol: TCP
      name: http
  selector:
    app: auth-service
